--- a/PhysicsDarkUniverse/doc.bib
+++ b/PhysicsDarkUniverse/doc.bib
@@ -263,24 +263,34 @@
 @article{Bell:2015sza,
       author         = "Bell, Nicole F. and Cai, Yi and Dent, James B. and Leane,
                         Rebecca K. and Weiler, Thomas J.",
-      title          = "Dark matter at the {LHC}: {EFTs} and gauge invariance",
+      title          = "{Dark matter at the LHC: Effective field theories and
+                        gauge invariance}",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
       year           = "2015",
+      number         = "5",
+      pages          = "053008",
+      doi            = "10.1103/PhysRevD.92.053008",
       eprint         = "1503.07874",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:1503.07874;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1503.07874;%%"
 }
 
 @article{Crivellin:2015wva,
       author         = "Crivellin, Andreas and Haisch, Ulrich and Hibbs, Anthony",
-      title          = "{LHC} constraints on gauge boson couplings to dark
-                        matter",
+      title          = "{LHC constraints on gauge boson couplings to dark
+                        matter}",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
       year           = "2015",
+      pages          = "074028",
+      doi            = "10.1103/PhysRevD.91.074028",
       eprint         = "1501.00907",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "CERN-PH-TH-2014-252",
-      SLACcitation   = "%%CITATION = ARXIV:1501.00907;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1501.00907;%%"
 }
 
 
@@ -299,6 +309,7 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1402.2285;%%",
 }
+
 @ARTICLE{Tait:2013,
   AUTHOR       = "Anthony DiFranzo and Keiko I. Nagao and Arvind Rajaraman and Tim M. P. Tait",
   TITLE        = "Simplified Models for Dark Matter Interacting With Quarks",
@@ -323,18 +334,23 @@
       reportNumber   = "FERMILAB-FN-0990-PPD",
       SLACcitation   = "%%CITATION = ARXIV:1409.2893;%%",
 }
+
 @article{Malik:2014ggr,
-      author         = "Malik, Sarah and McCabe, Christopher and Araujo, Henrique
-                        and Belyaev, A. and Boehm, Celine and others",
-      title          = "Interplay and Characterization of Dark Matter Searches
-                        at Colliders and in Direct Detection Experiments",
-      year           = "2014",
+      author         = "Malik, Sarah A. and others",
+      title          = "{Interplay and Characterization of Dark Matter Searches
+                        at Colliders and in Direct Detection Experiments}",
+      journal        = "Phys. Dark Univ.",
+      volume         = "9-10",
+      year           = "2015",
+      pages          = "51-58",
+      doi            = "10.1016/j.dark.2015.03.003",
       eprint         = "1409.4075",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "KCL-PH-TH-2014-37, LCTS-2014-36, CERN-PH-TH-2014-180",
-      SLACcitation   = "%%CITATION = ARXIV:1409.4075;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1409.4075;%%"
 }
+
 @article{Harris:2014hga,
       author         = "Harris, Philip and Khoze, Valentin V. and Spannowsky,
                         Michael and Williams, Ciaran",
@@ -622,15 +638,20 @@
 
 @article{ATLASsamesigntop,
       authors  = "{ATLAS Collaboration}",
-      title          = "Analysis of events with {$b$}-jets and two leptons of the same charge or three leptons in {$pp$} collisions at {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
-      journal        = "submitted to Eur.Phys.J.~C",
-      volume         = "",
-      pages          = "",
-      doi            = "",
+      title          = "{Analysis of events with $b$-jets and a pair of leptons
+                        of the same charge in $pp$ collisions at $\sqrt{s}=8$ TeV
+                        with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "JHEP",
+      volume         = "10",
       year           = "2015",
+      pages          = "150",
+      doi            = "10.1007/JHEP10(2015)150",
       eprint         = "1504.04605",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2015-060",
+      SLACcitation   = "%%CITATION = ARXIV:1504.04605;%%"
 }
 
 @misc{MGmodel,
@@ -714,142 +735,142 @@
 
 @misc{ForumSVN,
         key = {Forum Model Repository},
-	title = "{SVN} repository for model, input and parameter cards for models considered in the {ATLAS}/{CMS} {Dark Matter Forum} studies",
-	howpublished = {\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/}},
+	title = "{Git} repository for model, input and parameter cards for models considered in the {ATLAS}/{CMS} {Dark Matter Forum} studies",
+	howpublished = {\url{https://github.com/LHC-DMWG/model-repository/tree/master/models}},
 	year = {2015}, 
-	note = "[Online; accessed 13-June-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMV,
         key = {Forum Model Repository DMV},
-	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of vector mediator",
-	howpublished = {\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMV/}},
+	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of vector mediator",
+	howpublished = {\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMV}},
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMA,
         key = {Forum Model Repository DMA},
-	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of axial vector mediator",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMA/}",
+	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of axial vector mediator",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMA}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMS,
         key = {Forum Model Repository DMS},
-	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar and pseudoscalar
+	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar and pseudoscalar
 	coupling to the quarks in a {Yukawa}-like way, at {NLO}",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS/}",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMS}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMP_tloop,
         key = {Forum Model Repository DMP_tloop},
-	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator,
+	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator,
 	coupling to the quarks through a top loop",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMP_tloop/}",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMP_tloop}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMS_tloop,
         key = {Forum Model Repository DMS_tloop},
-	title = "{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar mediator",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMS_tLoop/}",
+	title = "{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of scalar mediator",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMS_tLoop}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMGG,
         key = {Forum Model Repository DMGG},
-	title = {{SVN} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop},
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_DMGG/}",
+	title = {{Git} repository for {POWHEG} input card for model with {$s$}-channel exchange of pseudo-scalar mediator, with "effective" coupling from gluon loop},
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_DMGG}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_EW_DMV,
         key = {Forum Model Repository EW_DMV},
-	title = "{SVN} repository for {Madgraph} input cards for model with {$s$}-channel exchange of vector mediator, for electroweak boson final states",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_DMV/}",
+	title = "{Git} repository for {Madgraph} input cards for model with {$s$}-channel exchange of vector mediator, for electroweak boson final states",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_DMV}",
 	year = {2015}, 
-	note = "[Online; accessed 15-May-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_TChannel_PapucciVichiZurek,
         key = {Forum Model Repository TChannel-1},
-	title = "{SVN} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to light quarks only",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_PapucciVichiZurek/}",
+	title = "{Git} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to light quarks only",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_tChannel/contributed_by_PapucciVichiZurek}",
 	year = {2015}, 
-	note = "[Online; accessed 27-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_TChannel_Amelia,
         key = {Forum Model Repository TChannel-2},
-	title = "{SVN} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to all quark generations",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/Monojet_tChannel/contributed_by_Amelia_Brennan/}",
+	title = "{Git} repository for {Madgraph} inputs with {$t$}-channel exchange of colored scalar mediator, couplings to all quark generations",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/Monojet_tChannel/contributed_by_Amelia_Brennan}",
 	year = {2015}, 
-	note = "[Online; accessed 27-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 
 @misc{ForumSVN_DMTTBar,
         key = {Forum Model Repository DMTTBar},
-	title = "{SVN} repository for {Madgraph} inputs for model with {$s$}-channel exchange of pseudo-scalar mediator, produced in association with top quarks",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S+PS/}",
+	title = "{Git} repository for {Madgraph} inputs for model with {$s$}-channel exchange of pseudo-scalar mediator, produced in association with top quarks",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/HF_S+PS}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_DMSingleB,
         key = {Forum Model Repository DMSingleB},
-	title = "{SVN} repository for {Madgraph} inputs for simplified model with a colored scalar mediator coupling to {DM} and b-quarks",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_S+PS/}",
+	title = "{Git} repository for {Madgraph} inputs for simplified model with a colored scalar mediator coupling to {DM} and b-quarks",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/HF_S+PS}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_EWEFTD7,
         key = {Forum Model Repository EWEFTD7},
-	title = "{SVN} repository for {Madgraph} inputs for dimension-7 {EFT} models with direct {DM}-{EW} boson couplings",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Fermion_D7/contributed_by_Renjie_Wang/}",
+	title = "{Git} repository for {Madgraph} inputs for dimension-7 {EFT} models with direct {DM}-{EW} boson couplings",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Fermion_D7/contributed_by_Renjie_Wang}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_EWMonoHiggs,
         key = {Forum Model Repository EWMonoHiggs},
-	title = "{SVN} repository for {Madgraph} inputs for vector and scalar mediator models leading to a mono-{Higgs} signature",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_all/}",
+	title = "{Git} repository for {Madgraph} inputs for vector and scalar mediator models leading to a mono-{Higgs} signature",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Higgs_all}",
 	year = {2015}, 
-	note = "[Online; accessed 24-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_EWMonoHiggs_2HDM,
         key = {Forum Model Repository EWMonoHiggs-2HDM},
-	title = "{SVN} repository for {Madgraph} inputs for {2HDM} model leading to a mono-{Higgs} signature",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_2HDM/}",
+	title = "{Git} repository for {Madgraph} inputs for {2HDM} model leading to a mono-{Higgs} signature",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Higgs_2HDM}",
 	year = {2015}, 
-	note = "[Online; accessed 12-May-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 
 @misc{ForumSVN_EWMonoTop,
         key = {Forum Model Repository EWMonoTop},
-	title = "{SVN} repository for {Madgraph} inputs for mono-top models",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_SingleTop/}",
+	title = "{Git} repository for {Madgraph} inputs for mono-top models",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/HF_SingleTop}",
 	year = {2015}, 
-	note = "[Online; accessed 27-April-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{ForumSVN_monoHEFTD5,
         key = {Forum Model Repository monoHEFTD5},
-	title = "{SVN} repository for {Madgraph} inputs for mono-{Higgs} {EFT} models, dimension 4 and 5",
-	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_D4D5/}",
+	title = "{Git} repository for {Madgraph} inputs for mono-{Higgs} {EFT} models, dimension 4 and 5",
+	howpublished = "\url{https://github.com/LHC-DMWG/model-repository/tree/master/models/EW_Higgs_D4D5}",
 	year = {2015}, 
-	note = "[Online; accessed 04-May-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 %%%%% Appendix reinterpretation
@@ -886,18 +907,21 @@
 }
 
 @article{Kim:2015wza,
-	author         = "Kim, Jong Soo and Schmeier, Daniel and Tattersall, Jamie
-	and Rolbiecki, Krzysztof",
-	title          = "A framework to create customised {LHC} analyses within
-	{CheckMATE}",
+      author         = "Kim, Jong Soo and Schmeier, Daniel and Tattersall, Jamie
+                        and Rolbiecki, Krzysztof",
+      title          = "{A framework to create customised LHC analyses within
+                        CheckMATE}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "196",
       year           = "2015",
+      pages          = "535-562",
+      doi            = "10.1016/j.cpc.2015.06.002",
       eprint         = "1503.01123",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "IFT-UAM-CSIC-15-021",
-      SLACcitation   = "%%CITATION = ARXIV:1503.01123;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1503.01123;%%"
 }
-
 
 @article{Dumont:2014tja,
 	author         = "Dumont, B. and Fuks, B. and Kraml, S. and Bein, S. and
@@ -1022,16 +1046,20 @@
 }
 @article{Daylan:2014rsa,
       author         = "Daylan, Tansu and Finkbeiner, Douglas P. and Hooper, Dan
-                        and Linden, Tim and Portillo, Stephen K. N. and others",
-      title          = "The Characterization of the Gamma-Ray Signal from the
-                        Central {Milky Way}: A Compelling Case for Annihilating Dark
-                        Matter",
-      year           = "2014",
+                        and Linden, Tim and Portillo, Stephen K. N. and Rodd,
+                        Nicholas L. and Slatyer, Tracy R.",
+      title          = "{The characterization of the gamma-ray signal from the
+                        central Milky Way: A case for annihilating dark matter}",
+      journal        = "Phys. Dark Univ.",
+      volume         = "12",
+      year           = "2016",
+      pages          = "1-23",
+      doi            = "10.1016/j.dark.2015.12.005",
       eprint         = "1402.6703",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph.HE",
       reportNumber   = "FERMILAB-PUB-14-032-A, MIT-CTP-4533",
-      SLACcitation   = "%%CITATION = ARXIV:1402.6703;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1402.6703;%%"
 }
 
 @article{Agrawal:2014aoa,
@@ -1576,10 +1604,23 @@
       reportNumber   = "CERN-TH-2002-147, IFUP-TH-2002-17",
       SLACcitation   = "%%CITATION = HEP-PH/0207036;%%",
 }
+
+%@article{Belyaev:2016lok,
 @article{Belyaev:2015tap,
-      author = "Belyaev, A. and Cacciapaglia, G. and Ivanov, I. and Rojas, F. and Thomas, M.",
-      note = "to appear",
-    year           = "2015",
+      author         = "Belyaev, Alexander and Cacciapaglia, Giacomo and Ivanov,
+                        Igor P. and Rojas-Abatte, Felipe and Thomas, Marc",
+      title          = "{Anatomy of the Inert Two Higgs Doublet Model in the
+                        light of the LHC and non-LHC Dark Matter Searches}",
+      journal        = "Phys. Rev.",
+      volume         = "D97",
+      year           = "2018",
+      number         = "3",
+      pages          = "035011",
+      doi            = "10.1103/PhysRevD.97.035011",
+      eprint         = "1612.00511",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1612.00511;%%"
 }
 
 
@@ -1947,17 +1988,22 @@
       SLACcitation   = "%%CITATION = HEP-PH/0611129;%%",
 }
 
+
+%@article{Abdallah:2015ter,
 @article{DMatLHCProceedings,
-		author         = "Abdallah, Jalal and Araujo, Henrique and Arbey, Alexandre
-		and Ashkenazi, Adi and Belyaev, Alexander and others",
-		title          = "Simplified Models for Dark Matter Searches at the {LHC}",
-		year           = "2015",
-		eprint         = "1506.03116",
-		archivePrefix  = "arXiv",
-		primaryClass   = "hep-ph",
-		SLACcitation   = "%%CITATION = ARXIV:1506.03116;%%",
-		note           = "submitted to {Phys.Dark Univ.}"
-	}
+      author         = "Abdallah, Jalal and others",
+      title          = "{Simplified Models for Dark Matter Searches at the LHC}",
+      journal        = "Phys. Dark Univ.",
+      volume         = "9-10",
+      year           = "2015",
+      pages          = "8-23",
+      doi            = "10.1016/j.dark.2015.08.001",
+      eprint         = "1506.03116",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-15-283-CD, CERN-PH-TH-2015-139",
+      SLACcitation   = "%%CITATION = ARXIV:1506.03116;%%"
+}
 	
 %%% All references for experimental searches
 
@@ -1965,18 +2011,24 @@
 
 
 @article{Aad:2015zva,
-      author         = "{ATLAS Collaboration}",
-      title          = "Search for new phenomena in final states with an
-                        energetic jet and large missing transverse momentum in {$pp$}
-                        collisions at {$\sqrt{s}=8$}~{TeV} with the {ATLAS} detector",
-      collaboration  = "{ATLAS}",
+      author         = "Aad, Georges and others",
+      title          = "{Search for new phenomena in final states with an
+                        energetic jet and large missing transverse momentum in pp
+                        collisions at $\sqrt{s}=$8 TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
       year           = "2015",
+      number         = "7",
+      pages          = "299",
+      doi            = "10.1140/epjc/s10052-015-3517-3,
+                        10.1140/epjc/s10052-015-3639-7",
+      note           = "[Erratum: Eur. Phys. J.C75,no.9,408(2015)]",
       eprint         = "1502.01518",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "CERN-PH-EP-2014-299",
-      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%",
-      note = "submitted to {Eur.Phys.J.~C}"
+      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%"
 }
 
 
@@ -2108,17 +2160,20 @@
 %%%CMS
 
 @article{Khachatryan:2014rwa,
-    author         = "{CMS Collaboration}",
-	title          = "Search for new phenomena in monophoton final states in
-	proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
-	collaboration  = "{CMS}",
-      year           = "2014",
+      author         = "{CMS Collaboration}",
+      title          = "{Search for new phenomena in monophoton final states in
+                        proton-proton collisions at $\sqrt s =$ 8 TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Lett.",
+      volume         = "B755",
+      year           = "2016",
+      pages          = "102-124",
+      doi            = "10.1016/j.physletb.2016.01.057",
       eprint         = "1410.8812",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-EXO-12-047, CERN-PH-EP-2014-253",
-      SLACcitation   = "%%CITATION = ARXIV:1410.8812;%%",
-	  note = "submitted to {Phys.Lett.B}",
+      SLACcitation   = "%%CITATION = ARXIV:1410.8812;%%"
 }
 
 @article{Khachatryan:2014tva,
@@ -2141,18 +2196,21 @@
 %%% ttbar+MET
 
 @article{Khachatryan:2015nua,
-    author         = "{CMS Collaboration}",
-	title          = "Search for the production of dark matter in association
-	with top-quark pairs in the single-lepton final state in
-	proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
-	collaboration  = "{CMS}",
+      author         = "{CMS Collaboration}", 
+      title          = "{Search for the production of dark matter in association
+                        with top-quark pairs in the single-lepton final state in
+                        proton-proton collisions at sqrt(s) = 8 TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "06",
       year           = "2015",
+      pages          = "121",
+      doi            = "10.1007/JHEP06(2015)121",
       eprint         = "1504.03198",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-B2G-14-004, CERN-PH-EP-2015-087",
-      SLACcitation   = "%%CITATION = ARXIV:1504.03198;%%",
-      note = "submitted to {JHEP}",
+      SLACcitation   = "%%CITATION = ARXIV:1504.03198;%%"
 }
 
 %%DM+HF
@@ -2177,32 +2235,44 @@
 
 %%% monotop
 
-
 @article{Aad:2015eha,
 	author  = "{ATLAS Collaboration}",
-	title          = "Search for New Phenomena in Dijet Angular Distributions
-	in Proton-Proton Collisions at {$\sqrt{s} = 8$}~{TeV} Measured
-	with the {ATLAS} detector",
-	year           = "2015",
-	eprint         = "1504.00357",
-	archivePrefix  = "arXiv",
-	primaryClass   = "hep-ex",
-	reportNumber   = "CERN-PH-EP-2015-067",
-	SLACcitation   = "%%CITATION = ARXIV:1504.00357;%%",
+      title          = "{Search for New Phenomena in Dijet Angular Distributions
+                        in Proton-Proton Collisions at $\sqrt{s} = 8$ TeV Measured
+                        with the ATLAS Detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "114",
+      year           = "2015",
+      number         = "22",
+      pages          = "221802",
+      doi            = "10.1103/PhysRevLett.114.221802",
+      eprint         = "1504.00357",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2015-067",
+      SLACcitation   = "%%CITATION = ARXIV:1504.00357;%%"
 }
 
+
 @article{Khachatryan:2014cja,
-	author         = "{CMS Collaboration}",
-	title          = "Search for quark contact interactions and extra spatial
-	dimensions using dijet angular distributions in
-	proton-proton collisions at {$\sqrt{s}$} = 8~{TeV}",
-	year           = "2014",
-	eprint         = "1411.2646",
-	archivePrefix  = "arXiv",
-	primaryClass   = "hep-ex",
-	reportNumber   = "CMS-EXO-12-050, CERN-PH-EP-2014-261",
-	SLACcitation   = "%%CITATION = ARXIV:1411.2646;%%",
+      author         = "{CMS Collaboration}",
+      title          = "{Search for quark contact interactions and extra spatial
+                        dimensions using dijet angular distributions in
+                        proton–proton collisions at $\sqrt s =$ 8 TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Lett.",
+      volume         = "B746",
+      year           = "2015",
+      pages          = "79-99",
+      doi            = "10.1016/j.physletb.2015.04.042",
+      eprint         = "1411.2646",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-EXO-12-050, CERN-PH-EP-2014-261",
+      SLACcitation   = "%%CITATION = ARXIV:1411.2646;%%"
 }
+
 
 %%% END OF ATLAS/CMS EXPERIMENTAL PAPERS
 
@@ -2469,23 +2539,32 @@
 @article{Chala:2015ama,
       author         = "Chala, Mikael and Kahlhoefer, Felix and McCullough,
                         Matthew and Nardini, Germano and Schmidt-Hoberg, Kai",
-      title          = "Constraining Dark Sectors with Monojets and Dijets",
+      title          = "{Constraining Dark Sectors with Monojets and Dijets}",
+      journal        = "JHEP",
+      volume         = "07",
       year           = "2015",
+      pages          = "089",
+      doi            = "10.1007/JHEP07(2015)089",
       eprint         = "1503.05916",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "DESY-15-036, CERN-PH-TH-2015-057",
-      SLACcitation   = "%%CITATION = ARXIV:1503.05916;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1503.05916;%%"
 }
+
 
 @article{Bai:2015nfa,
       author         = "Bai, Yang and Bourbeau, James and Lin, Tongyan",
-      title          = "Dark Matter Searches with a Mono-{$Z^\prime$} jet",
+      title          = "{Dark matter searches with a mono-$Z^{′}$ jet}",
+      journal        = "JHEP",
+      volume         = "06",
       year           = "2015",
+      pages          = "205",
+      doi            = "10.1007/JHEP06(2015)205",
       eprint         = "1504.01395",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:1504.01395;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1504.01395;%%"
 }
 
 @article{Endo:2014mja,
@@ -2577,21 +2656,28 @@
 	title = "Simplified dark matter models at {NLO}, {UFO} for {Feynrules}~2.3 and {\madgraph}. v0.1\_alpha: alpha version",
 	howpublished = "\url{https://feynrules.irmp.ucl.ac.be/wiki/DMsimp}",
 	year = {2015}, 
-	note = "[Online; accessed 12-June-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
+
+%@article{Backovic:2015soa,
 @article{NewMadgraphModels,
-	author         = "Backovic, Mihailo and Kr{\"a}mer, Michael and Maltoni,
-	Fabio and Martini, Antony and Mawatari, Kentarou and
-	Pellen, Mathieu",
-	title          = "{Higher-order QCD predictions for dark matter production
-	at the LHC in simplified models with s-channel mediators}",
-	year           = "2015",
-	eprint         = "1508.05327",
-	archivePrefix  = "arXiv",
-	primaryClass   = "hep-ph",
-	reportNumber   = "MCNET-15-24, CP3-15-25, TTK-15-19",
-	SLACcitation   = "%%CITATION = ARXIV:1508.05327;%%"
+      author         = "Backovic, Mihailo and Kr{\"a}mer, Michael and Maltoni,
+                        Fabio and Martini, Antony and Mawatari, Kentarou and
+                        Pellen, Mathieu",
+      title          = "{Higher-order QCD predictions for dark matter production
+                        at the LHC in simplified models with s-channel mediators}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
+      year           = "2015",
+      number         = "10",
+      pages          = "482",
+      doi            = "10.1140/epjc/s10052-015-3700-6",
+      eprint         = "1508.05327",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MCNET-15-24, CP3-15-25, TTK-15-19",
+      SLACcitation   = "%%CITATION = ARXIV:1508.05327;%%"
 }
 
 @article{Baur:1989cm,
@@ -2628,7 +2714,7 @@
 	title = "The {Durham} {HepData} Project",
 	howpublished = "\url{http://hepdata.cedar.ac.uk/abouthepdata}",
 	year = {2015}, 
-	note = "[Online; accessed 13-June-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{HEPData,
@@ -2644,7 +2730,7 @@
 	title = "{PDF4LHC}: Recommendation for {LHC} cross section calculations",
 	howpublished = "\url{http://www.hep.ucl.ac.uk/pdf4lhc/}",
 	year = {2015}, 
-	note = "[Online; accessed 13-June-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @misc{INSPIRE,
@@ -2652,7 +2738,7 @@
 	title = "{INSPIRE}: High-Energy Physics Literature Database",
 	howpublished = "\url{http://inspirehep.net}",
 	year = {2015}, 
-	note = "[Online; accessed 13-June-2015]"
+	note = "[Online; accessed 08-May-2019]"
 }
 
 @article{Sjostrand:2007gs,
@@ -2808,9 +2894,9 @@
 @misc{PGS,
         key = {PGS},
 	title = "{PGS}: simulation of a generic high-energy physics collider detector",
-	howpublished = "\url{http://www.physics.ucdavis.edu/~conway/research/software/pgs/pgs4-general.htm}",
+	howpublished = "\url{http://conway.physics.ucdavis.edu/research/software/pgs/pgs4-general.htm}",
 	year = {2015}, 
-	note = "[Online; accessed 13-June-2015]"
+	note = "[Online; accessed 09-May-2019]"
 }
 
 @article{ScalarMultiplet,
@@ -3038,19 +3124,26 @@
       SLACcitation   = "%%CITATION = ARXIV:1303.3010;%%", 
 } 
 
+%@article{Belanger:2015kga,
 @article{IDMdileptonsII,
-	author         = "Belanger, Genevieve and Dumont, Beranger and Goudelis,
-	Andreas and Herrmann, Bjorn and Kraml, Sabine and others",
-	title          = "Dilepton constraints in the {Inert Doublet Model} from {Run
-	1} of the {LHC}",
-	year           = "2015",
-	eprint         = "1503.07367",
-	archivePrefix  = "arXiv",
-	primaryClass   = "hep-ph",
-	reportNumber   = "LAPTH-015-15, CTPU-15-04, LPSC-15084",
-	SLACcitation   = "%%CITATION = ARXIV:1503.07367;%%",
-}
 
+      author         = "Belanger, Genevieve and Dumont, Beranger and Goudelis,
+                        Andreas and Herrmann, Bjorn and Kraml, Sabine and
+                        Sengupta, Dipan",
+      title          = "{Dilepton constraints in the Inert Doublet Model from Run
+                        1 of the LHC}",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
+      year           = "2015",
+      number         = "11",
+      pages          = "115011",
+      doi            = "10.1103/PhysRevD.91.115011",
+      eprint         = "1503.07367",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LAPTH-015-15, CTPU-15-04, LPSC-15084",
+      SLACcitation   = "%%CITATION = ARXIV:1503.07367;%%"
+}
 
 @article{Marchesini1992465,
 	title = "\{HERWIG\} 5.1 - a Monte Carlo event generator for simulating hadron emission reactions with interfering gluons ",
