--- a/PhysicsDarkUniverse/tex/Presentation_Of_Experimental_Results.tex
+++ b/PhysicsDarkUniverse/tex/Presentation_Of_Experimental_Results.tex
@@ -45,7 +45,8 @@ For what concerns the generation of the models, it is desirable to have the foll
 	\item Process cards: Process cards including  PDF choices, details of matching algorithms and scales and details of process generation. If process cards are not available, the above items should be clearly identified. 
 	\item Model files: For models which are not already implemented in \madgraph, the availability of the corresponding model files in the UFO format~\cite{Degrande:2011ua} is highly desired. This format details the exact notation used in the model and hence sets up a complete framework. In case \madgraph is not used, enough information should be provided in order to clearly identify the underlying model used for interpretations and reproduce the generation. 
 \end{itemize}
-The ATLAS/CMS Dark Matter Forum provides most of the information needed within its SVN repository~\cite{ForumSVN} and on a dedicated HEPData~\cite{HEPData} page dedicated to the results in this report.
+The ATLAS/CMS Dark Matter Forum provides most of the information needed within its Git repository~\cite{ForumSVN}. 
+%and on a dedicated HEPData~\cite{HEPData} page dedicated to the results in this report.
 
 Efficiency maps and relevant kinematic distributions as reported in the analysis should be provided, in a digitized format with clearly specified units.
 If selection criteria cannot be easily simulated through parameterized detector simulation, the collaborations should provide the efficiency of such cuts. 
