--- a/PhysicsDarkUniverse/authors.tex
+++ b/PhysicsDarkUniverse/authors.tex
@@ -14,6 +14,8 @@
  
 \author[VeVT]{Barbara Alvarez Gonzalez} 
 \address[VeVT]{CERN, Switzerland}
+\address[VeVTa]{CERN, Switzerland (now at Ohio State University)}
+
  
 \author[xsup]{Jeremy Andrea} 
 \address[xsup]{Institut Pluridisciplinaire Hubert Curien/D\'epartement Recherches Subatomiques, Universit\'e de Strasbourg/CNRS-IN2P3, France}
@@ -41,7 +43,7 @@
 \author[MfUI]{Alexander Belyaev} 
 \address[MfUI]{Rutherford Appleton Laboratory and University of Southampton, United Kingdom}
  
-\author[VeVT]{Antonio Boveia (Forum organizer and editor)} 
+\author[VeVTa]{Antonio Boveia (Forum organizer and editor)} 
  
 \author[YMII]{Amelia Jean Brennan} 
 \address[YMII]{The University of Melbourne, Australia}
@@ -306,7 +308,7 @@
 \address[EruR]{Nikhef and GRAPPA, Netherlands}
  
 \author[Xmxx]{Arturo Sanchez Pineda} 
-\address[Xmxx]{INFN Sezione di Napoli, and Dipartimento di Fisica, Universit\`a di Napoli, Italy}
+\address[Xmxx]{INFN Sezione di Napoli, and Dipartimento di Fisica, Universit\`a di Napoli, Italy (now CERN)}
  
 \author[NVVu]{Subir Sarkar} 
 \address[NVVu]{Rudolf Peierls Centre for Theoretical Physics, University of Oxford, United Kingdom, and Niels Bohr Institute, Copenhagen, Denmark}
