--- a/PhysicsDarkUniverse/tex/backmatter.tex
+++ b/PhysicsDarkUniverse/tex/backmatter.tex
@@ -3,10 +3,10 @@
 The authors would like to thank Daniel Whiteson for helping in the review of this document. 
 This research was supported by the Munich Institute for Astro- and Particle Physics (MIAPP) of the DFG cluster of excellence "Origin and Structure of the Universe". The authors would like to express a special thanks to the Mainz Institute for Theoretical Physics (MITP) for its hospitality and support. P. Pani wishes to thank the support of the Computing Infrastructure of Nikhef.
 In addition we thank CERN and acknowledge the support of:
-DOE and NSF (USA);
+DOE and NSF (USA), including grant DE-SC0011726 for the preparation of this manuscript;
 SER, SNSF and Cantons of Bern and Geneva, Switzerland; 
 MINECO, Spain;
-European Union;
+European Union, where the preparation of this manuscript is part of a project that has received funding from the European Research Council under the European Union’s Horizon 2020 research and innovation program (grant agreement 679305);
 IN2P3-CNRS, CEA-DSM/IRFU, France;
 NSERC, NRC, and CFI, Canada;
 INFN, Italy;
